--- a/Myresume.html
+++ b/Myresume.html
@@ -796,7 +796,7 @@
             <div class="hero-image">
                 <div class="profile-card">
                     <div class="profile-image">
-                        <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/7336cc04-00ad-47b8-97c6-6973b7cb8386.png" alt="Professional headshot of Kint Lee B. Sola, a young Filipino professional in business attire with a confident smile, representing an administrative assistant and digital operations specialist" />
+                        <img src="9e1f580f-d4ea-48e2-9922-998b6cbe8f8e.png" alt="Professional headshot of Kint Lee B. Sola, a young Filipino professional in business attire with a confident smile, representing an administrative assistant and digital operations specialist" />
                     </div>
                     <h3>Professional Profile</h3>
                     <p>Administrative Excellence</p>
@@ -1433,4 +1433,5 @@
     </script>
 </body>
 </html>
+
 
