--- a/index.html
+++ b/index.html
@@ -223,8 +223,8 @@
         }
 
         .profile-image {
-            width: 200px;
-            height: 200px;
+            width: 100%;
+            height: 100%;
             border-radius: 50%;
             margin: 0 auto 1rem;
             background: var(--white);
@@ -1433,5 +1433,6 @@
     </script>
 </body>
 </html>
+
 
 
