--- a/index.html
+++ b/index.html
@@ -223,8 +223,8 @@
         }
 
         .profile-image {
-            width: 800px 50%;
-            height: 760px 50%;
+            width: 40%;
+            height: 40%;
             border-radius: 50%;
             margin: 0 auto 1rem;
             background: var(--white);
@@ -1433,6 +1433,7 @@
     </script>
 </body>
 </html>
+
 
 
 
